fix(styles): clipping overflow on top of content section

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -622,8 +622,7 @@ code,
 .roundedCorners,
 .project,
 hr,
-img,
-section {
+img {
   border-radius: 5px;
   overflow: hidden;
 }
